# arch-token-metadata

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json
benchmarks/token-metadata-benches/: Cargo.toml
benchmarks/token-metadata-benches/src/: main.rs
docs/: IMPLEMENTATION_STATUS.md  ROADMAP.md  SECURITY.md
docs/benchmarks/: README.md  report.json
examples/: README.md  docker-compose.yml  launch.sh
examples/arch-token-metadata-tour-rs/: Cargo.toml
examples/arch-token-metadata-tour-rs/src/: main.rs
examples/arch-token-metadata-tour-ts/: package.json
examples/arch-token-metadata-tour-ts/src/: index.ts
examples/setup-payer-and-program/: Cargo.toml
examples/setup-payer-and-program/src/: main.rs
program-tests/arch-token-metadata-tests/: Cargo.toml
program-tests/arch-token-metadata-tests/src/: lib.rs
program-tests/arch-token-metadata-tests/tests/: create_attributes_tests.rs  create_metadata_test.rs  create_metadata_tests.rs  deploy_test.rs  replace_attributes_tests.rs  simple_test.rs  update_metadata_tests.rs
programs/arch-token-metadata/: Cargo.toml  README.md
programs/arch-token-metadata/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
sdks/arch-signer-ts/: README.md  package.json
sdks/arch-signer-ts/src/: index.ts  shims.d.ts
sdks/arch-token-metadata-elf/: Cargo.toml  README.md  build.rs
sdks/arch-token-metadata-elf/src/: lib.rs
sdks/arch-token-metadata-sdk-rs/: Cargo.toml  README.md
sdks/arch-token-metadata-sdk-rs/src/: lib.rs
sdks/arch-token-metadata-sdk-ts/: README.md  package.json  tsconfig.json
sdks/arch-token-metadata-sdk-ts/sdks/arch-token-metadata-sdk-ts/test/fixtures/: metadata_instructions.json
sdks/arch-token-metadata-sdk-ts/src/: index.ts
sdks/arch-token-metadata-sdk-ts/src/serde/: pubkey.ts
sdks/arch-token-metadata-sdk-ts/test/: compute_budget.spec.ts  serialization.spec.ts  tx_builders.spec.ts  upstream.spec.ts
sdks/arch-token-metadata-sdk-ts/test/fixtures/: metadata_instructions.json
tools/arch-token-metadata-cli/: Cargo.toml  README.md
tools/arch-token-metadata-cli/src/: main.rs
tools/arch-token-metadata-fixtures/: Cargo.toml
tools/arch-token-metadata-fixtures/src/: main.rs
