[workspace]
resolver = "2"

members = [
    "benchmarks/*",
    "examples/arch-token-metadata-tour-rs",
    "examples/setup-payer-and-program",
    "program-tests/*",
    "programs/*",
    "sdks/arch-token-metadata-sdk-rs",
    "tools/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/levicook/arch-token-metadata"

[workspace.dependencies]
# Arch dependencies
apl-token = { version = "0.5.7", default-features = false }
arch_program = "0.5.7"
arch_sdk = "0.5.7"

arch_testing = { git = "ssh://git@github.com/levicook/arch-testing.git", default-features = false }
arch_token_metadata = { path = "programs/arch-token-metadata" }
arch_token_metadata_sdk = { path = "sdks/arch-token-metadata-sdk-rs" }

# External dependencies
anyhow = "1"
async-trait = "0.1"
bitcoin = "0.32"
borsh = "1.5"
dotenvy = "0.15"
hex = "0.4"
num-derive = "0.4"
num-traits = "0.2"
serde_json = "1.0"
serial_test = "3.2"
thiserror = "2"
tokio = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
