[workspace]
resolver = "2"

members = [
    "benchmarks/*",
    "examples/arch-token-metadata-tour-rs",
    "examples/setup-payer-and-program",
    "program-tests/*",
    "programs/*",
    "sdks/arch-token-metadata-sdk-rs",
    "tools/*",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/levicook/arch-token-metadata"

[workspace.dependencies]
# Arch dependencies
apl-token = { version = "0.5.11", default-features = false }
arch_program = "0.5.11"
arch_sdk = "0.5.11"

arch_testing = { version = "0.1.0", default-features = false }

arch-token-metadata = { version = "0.1.1", path = "programs/arch-token-metadata" }
arch-token-metadata-elf = { version = "0.1.1", path = "sdks/arch-token-metadata-elf" }
arch-token-metadata-sdk = { version = "0.1.1", path = "sdks/arch-token-metadata-sdk-rs" }

# External dependencies
anyhow = "1"
async-trait = "0.1"
bitcoin = "0.32"
borsh = "1.5"
dotenvy = "0.15"
hex = "0.4"
num-derive = "0.4"
num-traits = "0.2"
serde_json = "1.0"
serial_test = "3.2"
tempfile = "3"
thiserror = "2"
tokio = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
