[package]
name = "token-metadata-benches"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
arch_program = { workspace = true }
arch_sdk = { workspace = true }
arch_token_metadata = { workspace = true }
arch_token_metadata_sdk = { workspace = true }
bitcoin = { workspace = true }
dotenvy = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
