[package]
name = "arch_token_metadata_tour"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
apl-token = { workspace = true, features = ["no-entrypoint"] }
arch-token-metadata = { workspace = true, features = ["no-entrypoint"] }
arch-token-metadata-elf.workspace = true
arch-token-metadata-sdk.workspace = true
arch_program.workspace = true
arch_sdk.workspace = true
bitcoin.workspace = true
dotenvy = "0.15"
hex.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
