[package]
name = "arch-token-metadata-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
apl-token = { workspace = true, features = ["no-entrypoint"] }
arch_program.workspace = true
arch_sdk.workspace = true
arch_testing.workspace = true
arch_token_metadata = { workspace = true, features = ["no-entrypoint"] }
arch_token_metadata_elf.workspace = true
bitcoin.workspace = true
serial_test.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
