[package]
name = "arch_token_metadata"
edition.workspace = true
version.workspace = true

[dependencies]
apl-token = { workspace = true, default-features = false, features = ["no-entrypoint"] }
arch_program.workspace = true
borsh.workspace = true
num-derive.workspace = true
num-traits.workspace = true
thiserror.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "arch_token_metadata"

[features]
default = []
no-entrypoint = []
