[package]
name = "arch-token-metadata"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "On-chain program for Arch Token Metadata"
readme = "README.md"
keywords = ["arch", "token", "metadata", "program", "sbf"]
categories = ["cryptography", "embedded", "no-std"]

[dependencies]
apl-token = { workspace = true, default-features = false, features = ["no-entrypoint"] }
arch_program.workspace = true
borsh.workspace = true
num-derive.workspace = true
num-traits.workspace = true
thiserror.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "arch_token_metadata"

[features]
default = []
no-entrypoint = []
