[package]
name = "arch_token_metadata_fixtures"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
apl-token = { workspace = true, features = ["no-entrypoint"] }
arch-token-metadata = { workspace = true, features = ["no-entrypoint"] }
arch_program.workspace = true
borsh.workspace = true
hex.workspace = true
serde_json.workspace = true

[dev-dependencies]


